# antigravity-vibecoding-sportsai

./: .gitignore  README.md  prompt.md  pyproject.toml
backend/: generate_diag.py  generated_readme.md  header_cache.json  main.py  pyproject.toml  requirements.txt  test_codecs.py  test_parsing.py  verify_cleanup.py
backend/routers/: content.py  video.py
backend/services/: gcs_service.py  gemini_service.py  video_service.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
